# src/api/inferredTypes.ts
@@ -13,6 +13,9 @@ export type DebtCategory = z.infer<typeof schemas.DebtCategory>;
 export type ExpenseType = z.infer<typeof schemas.ExpenseType>;
 export type Debt = z.infer<typeof schemas.Debt>;
 export type DebtFilters = z.infer<typeof schemas.DebtFilters>;
+export type DebtList = z.infer<typeof schemas.DebtList>;
+export type CreateDebtListRequest = z.infer<typeof schemas.CreateDebtListRequest>;
+export type UpdateDebtRequest = z.infer<typeof schemas.UpdateDebtRequest>;
 export type Gender = z.infer<typeof schemas.Gender>;
 export type Player = z.infer<typeof schemas.Player>;
 export type CreatePlayerRequest = z.infer<typeof schemas.CreatePlayerRequest>;
